# Aether-Desktop-Agent

./: LICENSE  README.md  README_ZH.md
adapters/fs/: Cargo.toml
adapters/fs/src/: handler.rs  lib.rs
adapters/git/: Cargo.toml
adapters/git/src/: handler.rs  lib.rs
adapters/search/: Cargo.toml
adapters/search/src/: handler.rs  lib.rs  web_handler.rs
adapters/shell/: Cargo.toml
adapters/shell/src/: handler.rs  lib.rs
adapters/vision/: Cargo.toml
adapters/vision/src/: interaction.rs  lib.rs  sensing.rs
adapters/vm/hyperv/: Cargo.toml
adapters/vm/hyperv/src/: lib.rs
adapters/voice/: Cargo.toml
adapters/voice/src/: asr.rs  capture.rs  lib.rs  tts.rs
adapters/web/playwright/: Cargo.toml
adapters/web/playwright/runner/: index.js
adapters/web/playwright/src/: lib.rs
core/audit/: Cargo.toml
core/audit/src/: artifacts.rs  events.rs  lib.rs  metrics.rs  report.rs  retention.rs  telemetry.rs  writer.rs
core/audit/tests/: bundle_test.rs  observability_test.rs  retention_test.rs
core/cache/: Cargo.toml
core/cache/src/: lib.rs  metrics.rs
core/cli/: Cargo.toml
core/cli/playbooks/stress_test/: heavy_load.yaml
core/cli/src/: credentials.rs  main.rs
core/compression/: Cargo.toml
core/compression/src/: diff_summary.rs  extract.rs  lib.rs  manager.rs  report_gen.rs
core/executor/: Cargo.toml
core/executor/src/: budget.rs  concurrency.rs  lib.rs  main.rs  on_fail.rs  plan.rs  plan_splitter.rs  runner.rs  validator.rs
core/executor/tests/: regression_test.rs
core/executor/tests/golden/: run_report.md
core/llm/: Cargo.toml
core/llm/src/: lib.rs  prompts.rs  routing.rs  template_engine.rs
core/llm/src/providers/: mock.rs  openai_compat.rs
core/orchestrator/: Cargo.toml
core/orchestrator/src/: cluster.rs  escalation.rs  intent.rs  lib.rs  memory.rs  planner.rs  swarm.rs
core/playbooks/: Cargo.toml
core/playbooks/src/: lib.rs  recipes.rs
core/playbooks/tests/: recipe_test.rs
core/plugins/: Cargo.toml
core/plugins/src/: guard.rs  host.rs  lib.rs  manifest.rs  runner.rs  signing.rs
core/plugins/tests/: plugin_test.rs
core/policy/: Cargo.toml
core/policy/src/: guard.rs  lib.rs  profile.rs  secrets.rs
core/policy/tests/: profile_test.rs  verification.rs
core/redaction/: Cargo.toml
core/redaction/src/: lib.rs
core/redaction/tests/: redact_test.rs
core/sandbox/: Cargo.toml
core/sandbox/src/: lib.rs
core/sandbox/src/providers/: docker.rs  mock.rs  remote.rs
core/tool_api/: Cargo.toml
core/tool_api/src/: ipc.rs  lib.rs  router.rs  types.rs
core/ui/: Cargo.toml
core/ui/src/: lib.rs  uiir.rs
core/voice/dialogue/: Cargo.toml
core/voice/dialogue/src/: lib.rs
core/worker/: Cargo.toml
core/worker/src/: main.rs
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
desktop/dist-renderer/: index.html
desktop/dist-renderer/assets/: cssMode-3BI_yx_k.js  cssMode-CMrj4udh.js  cssMode-OJ5CwVdG.js  cssMode-mt8dUMOO.js  freemarker2-BL6AYh-I.js  freemarker2-BVIeIhdo.js  freemarker2-Bgu7hoyD.js  freemarker2-DrImpHVD.js  handlebars-BGRTQ5Ni.js  handlebars-CVd7hFVZ.js  handlebars-DmAZ4chJ.js  handlebars-I1WaCGQ0.js  html-Bm-XgGIS.js  html-DNPqOpsQ.js  html-DY_T3KuI.js  html-sw-wUbRs.js  htmlMode-BXr8IA3c.js  htmlMode-CKk3vaXe.js  htmlMode-XNRuABrX.js  htmlMode-hjmR7KFJ.js  index--tLt5IWD.js  index-B7qiYxdf.css  index-BihKkQpi.js  index-BlcryYCT.js  index-C5xNAQiQ.css  index-C8vxfTWy.css  index-DdnSJx0-.css  index-k5b19Pco.js  index-luYFUnqS.css  index-wewpBKke.js  javascript-BJssItKS.js  javascript-CUcFaCTX.js  javascript-D-ur0jqZ.js  javascript-D4f5wA-4.js  jsonMode-A9SwCdH3.js  jsonMode-B4BU2cbt.js  jsonMode-BQqKG9kY.js  jsonMode-CPQ2M76g.js  liquid-BgbFTSsf.js  liquid-C3gj7gvn.js  (+30 more)
desktop/scripts/: drift_check.js  notarize.js
desktop/src/: App.jsx  index.css  main.js  preload.js
desktop/src/components/Artifacts/: ArtifactExplorer.jsx
desktop/src/components/Audit/: AuditReplay.jsx
desktop/src/components/Browser/: BrowserView.jsx
desktop/src/components/IDE/: FileTree.jsx  MonacoEditor.jsx
desktop/src/components/LogViewer/: LogViewer.css  LogViewer.js
desktop/src/components/Memory/: MemoryExplorer.jsx
desktop/src/components/Metrics/: HealthDashboard.jsx
desktop/src/components/Navigation/: CommandPalette.jsx
desktop/src/components/Orchestration/: OrchestrationMap.jsx
desktop/src/components/Plugins/: PluginExplorer.jsx  PluginManager.jsx
desktop/src/components/Security/: IdentityVault.jsx
desktop/src/components/Settings/: SettingsPanel.jsx
desktop/src/components/SettingsPanel/: SettingsPanel.css  SettingsPanel.js
desktop/src/components/Terminal/: TerminalView.jsx
desktop/src/components/Vision/: VisionGallery.jsx  VisionHub.jsx
desktop/src/components/Workflows/: WorkflowStudio.jsx
desktop/src/design/: base.css  components.css  prototype.html  tokens.css
desktop/src/ide/: editor.js  index.html
desktop/src/lsp/: client.js
desktop/src/renderer/: index.html
desktop/src/renderer/components/: crash-dialog.js  diff-viewer.js  log-viewer.js
docs/: PLUGINS.md  WEAK_MODELS.md  admin_guide.md  artifacts_spec.md  design_system.md  enterprise_deploy.md  policy_profiles.md  release_checklist.md  remote_worker_protocol.md  retention_policy.md  security_checklist.md
