[package]
name    = "ada-adapter-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../../core/tool_api" }
ada-policy   = { path = "../../core/policy" }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
tempfile     = { workspace = true }
walkdir      = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
