[package]
name    = "ada-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
lazy_static = "1.4"
tempfile    = { workspace = true }
zip = "8.3.1"
flate2 = "1.1.9"
sysinfo = "0.38.4"
fs_extra = "1.3.0"
ada-redaction = { path = "../redaction" }
