[package]
name = "ada-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-orchestrator = { path = "../orchestrator" }
ada-tool-api     = { path = "../tool_api" }
ada-executor     = { path = "../executor" }
ada-sandbox  = { path = "../sandbox" }
ada-adapter-fs   = { path = "../../adapters/fs" }
ada-adapter-shell = { path = "../../adapters/shell" }
ada-adapter-git  = { path = "../../adapters/git" }
ada-adapter-search = { path = "../../adapters/search" }
ada-adapter-voice = { path = "../../adapters/voice" }
ada-policy       = { path = "../policy" }
ada-llm          = { path = "../llm" }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
keyring = { workspace = true }
