[package]
name    = "ada-executor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ada-executor"
path = "src/main.rs"

[dependencies]
ada-tool-api  = { path = "../tool_api" }
ada-audit     = { path = "../audit" }
ada-sandbox   = { path = "../sandbox" }
ada-cache     = { path = "../cache" }
ada-playbooks = { path = "../playbooks" }
ada-compression = { path = "../compression" }
ada-policy    = { path = "../../core/policy" }
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
schemars      = { workspace = true }
sha2          = { workspace = true }
jsonschema    = "0.17"
clap          = { version = "4", features = ["derive"] }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
async-trait   = { workspace = true }
