[package]
name    = "ada-playbooks"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../tool_api" }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
anyhow       = { workspace = true }
regex        = { workspace = true }
glob         = { workspace = true }
walkdir      = { workspace = true }
tracing      = { workspace = true }
