[package]
name    = "ada-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../tool_api" }
ada-policy   = { path = "../policy" }
ada-audit    = { path = "../audit" }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde        = { workspace = true, features = ["derive"] }
serde_yaml   = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
regex        = { workspace = true }
tempfile     = { workspace = true }
ed25519-dalek = "2.1"
hex           = { workspace = true }
rand          = "0.8"
