[package]
name    = "ada-policy"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../../core/tool_api" }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
regex        = { workspace = true }
tracing      = { workspace = true }
