[package]
name    = "ada-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../tool_api" }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
reqwest      = { version = "0.12.5", features = ["json"] }
