[package]
name = "ada-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
ada-tool-api = { path = "../tool_api" }
ada-orchestrator = { path = "../orchestrator" }
ada-executor = { path = "../executor" }
ada-sandbox = { path = "../sandbox" }
ada-adapter-fs = { path = "../../adapters/fs" }
ada-adapter-shell = { path = "../../adapters/shell" }

axum = "0.7.5"
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
